Fixed shadow scroller hiding scrollbars

--- a/test/dummy/app/frontend/stylesheets/components/_modal.scss
+++ b/test/dummy/app/frontend/stylesheets/components/_modal.scss
@@ -170,6 +170,7 @@ $fullscreen-mobile: 450px;
 .lightbox--nested-body {
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 }
 
 // Loading (ajax)
