--- a/test/dummy/app/frontend/stylesheets/components/_shadows.scss
+++ b/test/dummy/app/frontend/stylesheets/components/_shadows.scss
@@ -6,6 +6,7 @@
     flex-shrink: 1;
     flex-direction: column;
     display: flex;
+    overflow: hidden;
   }
 }
 .shadow__top,
